@@ -48,13 +48,14 @@
         <project.settings>${project.root}/settings</project.settings>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.bouncycastle.version>1.46</org.bouncycastle.version>
-        <slf4j.version>1.7.25</slf4j.version>
+        <slf4j.version>1.7.28</slf4j.version>
         <surefire.version>3.0.0-M3</surefire.version>
         <logback.version>1.2.3</logback.version>
         <junit.version>4.12</junit.version>
-        <mockito.version>2.23.4</mockito.version>
-        <spring.version>5.1.4.RELEASE</spring.version>
-        <formatter-maven-plugin.version>2.8.1</formatter-maven-plugin.version>
+        <mockito.version>3.0.0</mockito.version>
+        <spring.version>5.1.9.RELEASE</spring.version>
+        <formatter-maven-plugin.version>2.10.0</formatter-maven-plugin.version>
+        <graalvm.version>19.2.0</graalvm.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -73,7 +74,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.9.8</version>
+                <version>2.9.9</version>
             </dependency>
             <dependency>
                 <groupId>com.googlecode.gettext-commons</groupId>
@@ -82,6 +83,12 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <build>
         <pluginManagement>
             <plugins>
@@ -197,7 +204,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>0.8.4</version>
                 <executions>
                     <execution>
                         <id>agent</id>
@@ -216,10 +223,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.10</source>
-                    <target>1.10</target>
+                    <release>11</release>
                 </configuration>
             </plugin>
             <plugin>
@@ -227,7 +233,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire.version}</version>
                 <configuration>
-                    <forkCount>0</forkCount>
+                    <argLine>--add-exports javafx.graphics/com.sun.javafx.application=org.testfx</argLine>
                 </configuration>
             </plugin>
         </plugins>
